--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,7 @@ BenchmarkDotNet.Artifacts/
 
 # .NET Core
 appsettings.json
+appsettings.Development.json
 project.lock.json
 project.fragment.lock.json
 artifacts/
