--- a/.gitignore
+++ b/.gitignore
@@ -52,9 +52,10 @@ dlldata.c
 # Benchmark Results
 BenchmarkDotNet.Artifacts/
 
+
 # .NET Core
-appsettings.json
-appsettings.Development.json
+# appsettings.json
+# appsettings.Development.json
 project.lock.json
 project.fragment.lock.json
 artifacts/
